--- a/build.gradle
+++ b/build.gradle
@@ -21,6 +21,7 @@ dependencies {
     compile 'io.dropwizard:dropwizard-migrations:' + dropwizardVersion
     compile 'io.dropwizard:dropwizard-auth:' + dropwizardVersion
     compile 'io.dropwizard:dropwizard-jdbi:' + dropwizardVersion
+    compile 'io.dropwizard:dropwizard-assets:' + dropwizardVersion
     compile 'org.postgresql:postgresql:9.3-1102-jdbc41'
     compile 'com.h2database:h2:1.3.168'
 }
