--- a/build.gradle
+++ b/build.gradle
@@ -22,6 +22,7 @@ dependencies {
     compile 'io.dropwizard:dropwizard-auth:' + dropwizardVersion
     compile 'io.dropwizard:dropwizard-jdbi:' + dropwizardVersion
     compile 'io.dropwizard:dropwizard-assets:' + dropwizardVersion
+    compile 'io.dropwizard:dropwizard-views:' + dropwizardVersion
     compile 'org.postgresql:postgresql:9.3-1102-jdbc41'
     compile 'com.h2database:h2:1.3.168'
     compile 'org.openid4java:openid4java:0.9.7'
